A bunch of tweaks to support new chart types as well as version updates to libraries.

--- a/components/css/m-chart-highcharts-library-admin.css
+++ b/components/css/m-chart-highcharts-library-admin.css
@@ -1,3 +1,9 @@
+/* line 3, ../sass/_misc.scss */
+.column-m-chart-library span.highcharts {
+  background-image: url(../external/highcharts/highcharts-logo.svg);
+  background-size: contain;
+}
+
 /* line 8, ../sass/_chart-settings.scss */
 #m-chart .inside .settings .row.one p {
   float: left;
